changed embedding model

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "349d4443",
    "metadata": {},
    "outputs": [],
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "30d4ba95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")"
+    "embedder = SentenceTransformer(\"bhavyagiri/InLegal-Sbert\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "db008976",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "d924f68c",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4d2f7be7",
    "metadata": {},
    "outputs": [],
@@ -99,21 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "bbc7d832",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_4152\\3123097401.py:2: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-      "  memory=ConversationBufferMemory()\n",
-      "C:\\Users\\nihca\\AppData\\Local\\Temp\\ipykernel_4152\\3123097401.py:3: LangChainDeprecationWarning: The class `ConversationChain` was deprecated in LangChain 0.2.7 and will be removed in 1.0. Use :class:`~langchain_core.runnables.history.RunnableWithMessageHistory` instead.\n",
-      "  conversion = ConversationChain(llm=llm,memory=memory,prompt=custom,verbose=False)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llm=ollama()\n",
     "memory=ConversationBufferMemory()\n",
@@ -122,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "875ecf6a",
    "metadata": {},
    "outputs": [
@@ -133,15 +122,14 @@
       "⚖️ IPC + Judgement Chatbot (type 'exit' to quit)\n",
       "\n",
       "\n",
-      "Bot:  Based on the user's query, the relevant Indian Penal Code (IPC) sections that could potentially apply are:\n",
+      "Bot:  Based on the user's query, it appears that the act described falls under Section 375 of the Indian Penal Code (IPC), which pertains to rape. The specific sub-section would be:\n",
       "\n",
-      "1. Section 324 - Voluntarily causing hurt by dangerous weapons or means: This section might apply because the user admitted to killing their friend, which could be interpreted as causing hurt voluntarily. The punishment for this section includes imprisonment for a term extending up to three years, fine, or both.\n",
+      "1. Rape - Against her will.\n",
+      "2. Rape - Without her consent.\n",
       "\n",
-      "2. Section 302 - Murder: If the act of causing harm resulted in death, then Section 302 might also apply. However, it's important to note that intent is a crucial factor in determining whether an act falls under this section. In this case, if the user intentionally caused their friend's death, they could be charged with murder, which carries a maximum punishment of death or life imprisonment.\n",
+      "As for punishments, the Criminal Law (Amendment) Act, 2013 states that a man found guilty of rape may be punished with imprisonment ranging from 7 years up to life, and shall also be liable to fine. In certain circumstances such as when the victim is a child or the act was particularly brutal or cruel, the punishment may extend to death (capital punishment).\n",
       "\n",
-      "3. Section 304- Part I - Causing death by rash or negligent act: If the harm was caused without the intent to kill but recklessly, this section might apply. The punishment for this section includes imprisonment up to ten years, and a fine.\n",
-      "\n",
-      "Please remember that I am an AI model and my responses are based on the information provided in the Indian Penal Code. It's essential to consult with legal professionals to interpret laws accurately and understand the specific circumstances of each case.\n",
+      "It's important to note that this information provided is for educational purposes only and should not be used as legal advice. If you find yourself in a similar situation, it's crucial to consult with a legal professional for proper guidance.\n",
       "\n"
      ]
     }
@@ -180,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ca8260dc",
    "metadata": {},
    "outputs": [
@@ -188,9 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Bot:  Based on the provided judgement, intentional harm resulting in death can be punishable under IPC Section 302 or 324. Circumstantial evidence can support a conviction if it forms a clear and unambiguous chain proving your involvement. Be aware that any intentional harm could lead to legal consequences.\n",
-      "\n"
+      "Bot: Goodbye!\n"
      ]
     }
    ],
